--- a/profile.css
+++ b/profile.css
@@ -14,10 +14,34 @@ ul {
     color: mediumseagreen;
   }
   .c1, .c2, .c3, .c4, .c5{
+    max-width: 100%;
     font-family: monospace;
     color: rgb(255, 162, 0);
     display: inline-block;
+    font-size:1.0vw
   }
+
+  /* .prop-text{font-size:1.0vw}
+    @media (max-width : 768px) {
+    .prop-text{font-size:2.0vw}
+    } */
+  /* decrease font size for mobile */
+  @media only screen and (max-width: 600px) {
+    .c1, .c2, .c3, .c4, .c5{
+      font-size: 0.8em;
+    }
+  }
+
+  /* @media (min-width: 1025px) {
+    .c1, .c2, .c3, .c4, .c5{
+      font-size: 0.8em;
+    }
+  } */
+
+  .typing-demo {
+    width: 100%;
+  }
+
 
   h1{
     font-size: 3.2rem;
@@ -72,34 +96,6 @@ ul {
     to { width: 100% }
   }
 
-.navlogo {
-    /* border: 1px solid #ddd; */
-    border-radius: 50px;
-    padding: 5px;
-    width: 50px;
-}
-
-.main-nav {
-    padding: 0;
-}
-
-.main-nav a {
-    font-family: 'Lato', serif;
-    height: auto;
-    padding: 20px 15px;
-	text-transform: uppercase;
-	text-align: center;
-	display: block;
-	color: #34495e;
-    transition: all .4s ease;
-    -webkit-transition: all .5s ease;
-}
-
-.main-nav a:hover {
-    background: #34495e;
-    color: #f4f4f4;
-}
-
 .header {
 	/* padding-top: .5em;
 	padding-bottom: .5em; */
@@ -110,7 +106,7 @@ ul {
 	border-radius: 5px;
     width: 100%;
     /* position: fixed; */
-    transparent: transparent;
+    /* transparent: transparent; */
 }
     
 
