--- a/profile.css
+++ b/profile.css
@@ -10,6 +10,73 @@ ul {
   list-style: none;
 }
 
+h1{
+  font-size: 3.2rem;
+  margin-top: 1%;
+}
+h1 .type{
+    font-size: 2.5rem;
+    overflow: hidden;
+    white-space: nowrap; 
+    width: 0;
+    animation: 
+      typing 0.8s steps(6, end) forwards;
+}
+h1 .type2{
+    font-size: 2.5rem; 
+    overflow: hidden;
+    white-space: nowrap; 
+    width: 0;
+    animation: 
+      typing 1.5s steps(27, end) forwards;
+    animation-delay: 1s;
+}
+h1 .type3{
+    font-size: 2.5rem; 
+    overflow: hidden;
+    white-space: nowrap; 
+    width: 0;
+    animation: 
+      typing 2.5s steps(43, end) forwards;
+    animation-delay: 2.7s;
+}
+h1 .type4{
+    font-size: 2.5rem; 
+    overflow: hidden;
+    white-space: nowrap; 
+    width: 0;
+    animation: 
+      typing 2.5s steps(42, end) forwards;
+    animation-delay: 5.4s;
+}
+h1 .type5{
+    font-size: 2.5rem; 
+    overflow: hidden;
+    white-space: nowrap; 
+    width: 0;
+    animation: 
+      typing 0.1s steps(10, end) forwards;
+    animation-delay: 7.9s;
+}
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+.header {
+/* padding-top: .5em;
+padding-bottom: .5em; */
+border: 1px solid #a2a2a2;
+background-color: #f4f4f4;
+-webkit-border-radius: 5px;
+-moz-border-radius: 5px;
+border-radius: 5px;
+  width: 100%;
+  /* position: fixed; */
+  /* transparent: transparent; */
+}
+  
+
   a{
     color: mediumseagreen;
   }
@@ -18,7 +85,6 @@ ul {
     font-family: monospace;
     color: rgb(255, 162, 0);
     display: inline-block;
-    font-size:1.0vw
   }
 
   /* .prop-text{font-size:1.0vw}
@@ -38,77 +104,9 @@ ul {
     }
   } */
 
-  .typing-demo {
+.typing-demo {
     width: 100%;
-  }
-
-
-  h1{
-    font-size: 3.2rem;
-    margin-top: 1%;
-  }
-  h1 .type{
-      font-size: 2.5rem;
-      overflow: hidden;
-      white-space: nowrap; 
-      width: 0;
-      animation: 
-        typing 0.8s steps(6, end) forwards;
-  }
-  h1 .type2{
-      font-size: 2.5rem; 
-      overflow: hidden;
-      white-space: nowrap; 
-      width: 0;
-      animation: 
-        typing 1.5s steps(27, end) forwards;
-      animation-delay: 1s;
-  }
-  h1 .type3{
-      font-size: 2.5rem; 
-      overflow: hidden;
-      white-space: nowrap; 
-      width: 0;
-      animation: 
-        typing 2.5s steps(43, end) forwards;
-      animation-delay: 2.7s;
-  }
-  h1 .type4{
-      font-size: 2.5rem; 
-      overflow: hidden;
-      white-space: nowrap; 
-      width: 0;
-      animation: 
-        typing 2.5s steps(42, end) forwards;
-      animation-delay: 5.4s;
-  }
-  h1 .type5{
-      font-size: 2.5rem; 
-      overflow: hidden;
-      white-space: nowrap; 
-      width: 0;
-      animation: 
-        typing 0.1s steps(10, end) forwards;
-      animation-delay: 7.9s;
-  }
-  @keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-  }
-
-.header {
-	/* padding-top: .5em;
-	padding-bottom: .5em; */
-	border: 1px solid #a2a2a2;
-	background-color: #f4f4f4;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-    width: 100%;
-    /* position: fixed; */
-    /* transparent: transparent; */
 }
-    
 
 
 .intro {
@@ -158,6 +156,7 @@ ul {
 .profileImg {
         /* border: 1px solid #ddd; */
     border-radius: 180px;
+    margin-right: 2rem;
     /* padding: 5px; */
     width: 180px;
 }
