--- a/profile.css
+++ b/profile.css
@@ -4,16 +4,8 @@ body {
     margin: 0;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
+/* Typing Demo Start */
 
-h1{
-  font-size: 3.2rem;
-  margin-top: 1%;
-}
 h1 .type{
     font-size: 2.5rem;
     overflow: hidden;
@@ -22,92 +14,71 @@ h1 .type{
     animation: 
       typing 0.8s steps(6, end) forwards;
 }
+
 h1 .type2{
     font-size: 2.5rem; 
     overflow: hidden;
     white-space: nowrap; 
     width: 0;
     animation: 
-      typing 1.5s steps(27, end) forwards;
+        typing 1.5s steps(27, end) forwards;
     animation-delay: 1s;
 }
+
 h1 .type3{
     font-size: 2.5rem; 
     overflow: hidden;
     white-space: nowrap; 
     width: 0;
     animation: 
-      typing 2.5s steps(43, end) forwards;
+        typing 2.5s steps(43, end) forwards;
     animation-delay: 2.7s;
 }
+
 h1 .type4{
     font-size: 2.5rem; 
     overflow: hidden;
     white-space: nowrap; 
     width: 0;
     animation: 
-      typing 2.5s steps(42, end) forwards;
+        typing 2.5s steps(42, end) forwards;
     animation-delay: 5.4s;
 }
+
 h1 .type5{
     font-size: 2.5rem; 
     overflow: hidden;
     white-space: nowrap; 
     width: 0;
     animation: 
-      typing 0.1s steps(10, end) forwards;
+        typing 0.1s steps(10, end) forwards;
     animation-delay: 7.9s;
 }
+
 @keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
+    from { width: 0 }
+    to { width: 100% }
 }
 
-.header {
-/* padding-top: .5em;
-padding-bottom: .5em; */
-border: 1px solid #a2a2a2;
-background-color: #f4f4f4;
--webkit-border-radius: 5px;
--moz-border-radius: 5px;
-border-radius: 5px;
-  width: 100%;
-  /* position: fixed; */
-  /* transparent: transparent; */
-}
-  
-
-  a{
-    color: mediumseagreen;
-  }
-  .c1, .c2, .c3, .c4, .c5{
+.c1, .c2, .c3, .c4, .c5{
     max-width: 100%;
     font-family: monospace;
     color: rgb(255, 162, 0);
     display: inline-block;
-  }
+}
 
-  /* .prop-text{font-size:1.0vw}
-    @media (max-width : 768px) {
-    .prop-text{font-size:2.0vw}
-    } */
-  /* decrease font size for mobile */
-  @media only screen and (max-width: 600px) {
+/* decrease font size for mobile */
+@media only screen and (max-width: 600px) {
     .c1, .c2, .c3, .c4, .c5{
-      font-size: 0.8em;
+        font-size: 0.8em;
     }
-  }
-
-  /* @media (min-width: 1025px) {
-    .c1, .c2, .c3, .c4, .c5{
-      font-size: 0.8em;
-    }
-  } */
+}
 
 .typing-demo {
     width: 100%;
 }
 
+/* Typing Demo End */
 
 .intro {
     height: min(20vw, 300px);
@@ -131,7 +102,7 @@ border-radius: 5px;
     text-shadow: #26292d 0px 0px 10px;
 }
 
-.aboutMe {
+.aboutMeDiv {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -154,14 +125,14 @@ border-radius: 5px;
 }
 
 .profileImg {
-        /* border: 1px solid #ddd; */
     border-radius: 180px;
     margin-right: 2rem;
-    /* padding: 5px; */
     width: 180px;
 }
 
-.division {
+/* Skill Start */
+
+.skillDiv {
     background: #222;
     color: #fff;
     padding: 2em 8em;
@@ -172,7 +143,6 @@ border-radius: 5px;
 
 .skillHead {
     font-size: 2.5rem;
-    /* text-decoration: underline; */
 }
 
 .skillType {
@@ -189,6 +159,10 @@ border-radius: 5px;
     border-radius: 7px;
 }
 
+/* Skill End */
+
+/* Project Start */
+
 .projectSec {
     padding: 2em 4em ;
     margin-top: 1em;
@@ -199,7 +173,6 @@ border-radius: 5px;
 .projectHead {
     font-size: 2.5rem;
     padding-left: 4.5rem;
-    /* text-decoration: underline; */
 }
 
 .projectDiv {
@@ -237,182 +210,173 @@ border-radius: 5px;
     margin: 5px 10px;
 }
 
+/* Project End */
+
 .portfolio-card{
     box-shadow: 0px 2px 5px #888888;
     width: 2000px;
     background: #eee;
     border-radius: 4px;
 }
-/* .portfolio-card:hover{
-	box-shadow: 0px 10px 10px #888888;
-  cursor: pointer
-} */
+
 .portfolio-container-holder{
-	background: #eee;
-	padding-bottom: 20px;
+    background: #eee;
+    padding-bottom: 20px;
 }
 .portfolio-card-holder{
-	padding: 5px;
-	margin-bottom: 5px;
+    padding: 5px;
+    margin-bottom: 5px;
 }
 
 .portfolio-img{
-	width: 100%;
-	border-radius: 4px 4px 0 0;
+    width: 100%;
+    border-radius: 4px 4px 0 0;
 }
 
 .portfolio-img-desc{
-	position: relative;
-	bottom: 0px;
-	left: 0px;
-	right: 0px;
-	background: rgb(241, 238, 238);
-	color: #000;
-	text-align: center;
-	/* padding: 1px; */
+    position: relative;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    background: rgb(241, 238, 238);
+    color: #000;
+    text-align: center;
 }
 
 button {
     margin: 20px;
-  }
-  .custom-btn {
+}
+
+/*Blue Button Start*/
+
+.btn {
     width: 130px;
     height: 40px;
     color: #fff;
     border-radius: 5px;
-    padding: 10px 25px;
-    font-family: 'Lato', sans-serif;
+    padding: 0;
+    font-family: 'Lato', serif;
     font-size: 1.15rem;
     font-weight: 500;
-    background: transparent;
+    background: rgb(0,172,238); 
+    background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
     cursor: pointer;
     transition: all 0.3s ease;
     position: relative;
     display: inline-block;
-     box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-     7px 7px 20px 0px rgba(0,0,0,.1),
-     4px 4px 5px 0px rgba(0,0,0,.1);
+    box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+    7px 7px 20px 0px rgba(0,0,0,.1),
+    4px 4px 5px 0px rgba(0,0,0,.1);
     outline: none;
-  }
-  
-  /* 3 */
-  .btn-3 {
-    background: rgb(0,172,238);
-  background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
-    width: 130px;
-    height: 40px;
     line-height: 42px;
-    padding: 0;
     border: none;
-    
-  }
-  .btn-3 span {
+}
+
+.btn span {
     position: relative;
     display: block;
     width: 100%;
     height: 100%;
-  }
-  .btn-3:before,
-  .btn-3:after {
+}
+.btn:before,
+.btn:after {
     position: absolute;
     content: "";
     right: 0;
     top: 0;
-     background: rgba(2,126,251,1);
+    background: rgba(2,126,251,1);
     transition: all 0.3s ease;
-  }
-  .btn-3:before {
+}
+.btn:before {
     height: 0%;
     width: 2px;
-  }
-  .btn-3:after {
+}
+.btn:after {
     width: 0%;
     height: 2px;
-  }
-  .btn-3:hover{
-     background: transparent;
+}
+.btn:hover{
+    background: transparent;
     box-shadow: none;
-  }
-  .btn-3:hover:before {
+}
+.btn:hover:before {
     height: 100%;
-  }
-  .btn-3:hover:after {
+}
+.btn:hover:after {
     width: 100%;
-  }
-  .btn-3 span:hover{
-     color: rgba(2,126,251,1);
-  }
-  .btn-3 span:before,
-  .btn-3 span:after {
+}
+.btn span:hover{
+    color: rgba(2,126,251,1);
+}
+.btn span:before,
+.btn span:after {
     position: absolute;
     content: "";
     left: 0;
     bottom: 0;
-     background: rgba(2,126,251,1);
+    background: rgba(2,126,251,1);
     transition: all 0.3s ease;
-  }
-  .btn-3 span:before {
+}
+.btn span:before {
     width: 2px;
     height: 0%;
-  }
-  .btn-3 span:after {
+}
+.btn span:after {
     width: 0%;
     height: 2px;
-  }
-  .btn-3 span:hover:before {
+}
+.btn span:hover:before {
     height: 100%;
-  }
-  .btn-3 span:hover:after {
+}
+.btn span:hover:after {
     width: 100%;
-  }
+}
+/*Blue Button End*/
+
+/* Footer Start */
   
-  footer {
+footer {
     padding: 2em;
     text-align: center;
     font-size: 0.85rem;
     color: #fff;
     background: #222;
-  }
-
-  footer > a {
-    size: 2rem;
-    position: relative;
-    color: #fff;
-    text-decoration: none;
-  }
-
-  .footerSvgs {
-    margin-left: 1rem;
-    border-radius: 180px;
-    width: 70px;
-  }
+}
 
 .footerHeading {
-    font-size: 2.5rem;;
-    font-family: 'Lato', sans-serif;
+    font-size: 2.5rem;
+    font-family: 'Lato', serif;
 }
 
 .footerPara {
     font-size: 1.5rem;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Lato', serif;
 }
 
+.footerSvgs {
+    margin-left: 1rem;
+    border-radius: 180px;
+    width: 70px;
+}
+
+/* Footer End */
+
 @media (min-width: 769px) {
-	.header,
-	.main-nav {
-		display: flex;
-        /* position: relative; */
-	}
-	.header {
-		flex-direction: column;
-		align-items: center;
+    .header,
+    .main-nav {
+        display: flex;
+            /* position: relative; */
+    }
+    .header {
+        flex-direction: column;
+        align-items: center;
     }
 }
 
 @media (min-width: 1025px) {
-	.header {
-		flex-direction: row;
-		justify-content: space-between;
-	}
+    .header {
+        flex-direction: row;
+        justify-content: space-between;
+    }
 
 }
