--- a/profile.css
+++ b/profile.css
@@ -25,7 +25,7 @@ body {
 
 .aboutMeContent {
     width: 800px;
-    border-left: #26292d 2px solid;
+    border-left: #5c5c5c 2px solid;
     padding-left: 4em;
     padding-right: 1em;
     padding-bottom: 2em;
@@ -45,6 +45,7 @@ body {
     background: #222;
     color: #fff;
     font-family: 'Lato', serif;
+    padding-bottom: 1em;
 }
 
 .experienceHead {
